--- a/spring-cloud-config-server/src/main/resources/application.properties
+++ b/spring-cloud-config-server/src/main/resources/application.properties
@@ -1,1 +1,6 @@
+spring.application.name=spring-cloud-config-server
+
+server.port=8888
+
+spring.cloud.config.server.git.uri=https://github.com/voiddata/microservices-config
 
