--- a/generic-service/src/main/resources/application.properties
+++ b/generic-service/src/main/resources/application.properties
@@ -5,6 +5,9 @@ server.port=8200
 eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka
 
 # DataSource configuration
+#spring.datasource.hikari.initialization-fail-timeout=0
+#spring.datasource.hikari.connection-timeout=60000
+
 spring.datasource.driver-class-name=oracle.jdbc.OracleDriver
 spring.datasource.url=jdbc:oracle:thin:@//localhost:1521/ORCLPDB1
 spring.datasource.username=sasi
